crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__alpaca_multi_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
You are a Rust expert.

### Instruction:
How does borrowing work?

### Response:
