crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__alpaca_single_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
Below is an instruction that describes a task. Write a response that appropriately completes the request.

### Instruction:
Explain photosynthesis briefly.

### Response:
