crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__baichuan_multi_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
<reserved_106>You are a Rust expert.<reserved_107><reserved_106>How does borrowing work?<reserved_107>
