crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__baichuan_single_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
<reserved_106>Explain photosynthesis briefly.<reserved_107>
