crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__baichuan_with_system.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
<reserved_106>You are a science tutor.<reserved_107><reserved_106>What is ATP?<reserved_107>
