crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__bloom_multi_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
You are a Rust expert.

User: How does borrowing work?
Assistant:
