crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__chatglm_multi_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
[gMASK]<sop><|system|>
You are a Rust expert.<|user|>
How does borrowing work?<|assistant|>
