crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__chatglm_single_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
[gMASK]<sop><|user|>
Explain photosynthesis briefly.<|assistant|>
