crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__chatglm_with_system.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
[gMASK]<sop><|system|>
You are a science tutor.<|user|>
What is ATP?<|assistant|>
