crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__codegemma_single_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
<start_of_turn>user
Write a fibonacci function in Python.<end_of_turn>
<start_of_turn>model
